Kaggle Notebook | Titanic Competition Analysis | Version 4

--- a/titanic-competition-analysis.ipynb
+++ b/titanic-competition-analysis.ipynb
@@ -1,23 +1,58 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a06f4066",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004399,
+     "end_time": "2024-01-26T19:26:24.101177",
+     "exception": false,
+     "start_time": "2024-01-26T19:26:24.096778",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Titanic - Machine Learning from Disaster\n",
+    "### Prepared by Daniam henriques - 2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75de3b6e",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003657,
+     "end_time": "2024-01-26T19:26:24.108863",
+     "exception": false,
+     "start_time": "2024-01-26T19:26:24.105206",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "![Alternate Text if image doesn't load](https://imageio.forbes.com/specials-images/dam/imageserve/877330410/960x0.jpg?format=jpg&width=1440)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "227316a0",
+   "id": "5b8ce377",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-26T19:16:07.699874Z",
-     "iopub.status.busy": "2024-01-26T19:16:07.699030Z",
-     "iopub.status.idle": "2024-01-26T19:16:08.724954Z",
-     "shell.execute_reply": "2024-01-26T19:16:08.723023Z"
+     "iopub.execute_input": "2024-01-26T19:26:24.118977Z",
+     "iopub.status.busy": "2024-01-26T19:26:24.118496Z",
+     "iopub.status.idle": "2024-01-26T19:26:24.681444Z",
+     "shell.execute_reply": "2024-01-26T19:26:24.679800Z"
     },
     "papermill": {
-     "duration": 1.037686,
-     "end_time": "2024-01-26T19:16:08.729607",
+     "duration": 0.5718,
+     "end_time": "2024-01-26T19:26:24.684486",
      "exception": false,
-     "start_time": "2024-01-26T19:16:07.691921",
+     "start_time": "2024-01-26T19:26:24.112686",
      "status": "completed"
     },
     "tags": []
@@ -56,19 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "75fa8c49",
+   "id": "e2dc08c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T19:16:08.742016Z",
-     "iopub.status.busy": "2024-01-26T19:16:08.741082Z",
-     "iopub.status.idle": "2024-01-26T19:16:08.807645Z",
-     "shell.execute_reply": "2024-01-26T19:16:08.806348Z"
+     "iopub.execute_input": "2024-01-26T19:26:24.695391Z",
+     "iopub.status.busy": "2024-01-26T19:26:24.694757Z",
+     "iopub.status.idle": "2024-01-26T19:26:24.750068Z",
+     "shell.execute_reply": "2024-01-26T19:26:24.748833Z"
     },
     "papermill": {
-     "duration": 0.076234,
-     "end_time": "2024-01-26T19:16:08.810923",
+     "duration": 0.063761,
+     "end_time": "2024-01-26T19:26:24.752497",
      "exception": false,
-     "start_time": "2024-01-26T19:16:08.734689",
+     "start_time": "2024-01-26T19:26:24.688736",
      "status": "completed"
     },
     "tags": []
@@ -226,19 +261,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8dd612b",
+   "id": "46c37976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T19:16:08.823304Z",
-     "iopub.status.busy": "2024-01-26T19:16:08.822381Z",
-     "iopub.status.idle": "2024-01-26T19:16:08.851690Z",
-     "shell.execute_reply": "2024-01-26T19:16:08.850467Z"
+     "iopub.execute_input": "2024-01-26T19:26:24.764841Z",
+     "iopub.status.busy": "2024-01-26T19:26:24.763320Z",
+     "iopub.status.idle": "2024-01-26T19:26:24.791422Z",
+     "shell.execute_reply": "2024-01-26T19:26:24.790117Z"
     },
     "papermill": {
-     "duration": 0.038915,
-     "end_time": "2024-01-26T19:16:08.854691",
+     "duration": 0.038527,
+     "end_time": "2024-01-26T19:26:24.795615",
      "exception": false,
-     "start_time": "2024-01-26T19:16:08.815776",
+     "start_time": "2024-01-26T19:26:24.757088",
      "status": "completed"
     },
     "tags": []
@@ -383,19 +418,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d10a5cc6",
+   "id": "00f405e5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T19:16:08.867196Z",
-     "iopub.status.busy": "2024-01-26T19:16:08.866230Z",
-     "iopub.status.idle": "2024-01-26T19:16:08.883435Z",
-     "shell.execute_reply": "2024-01-26T19:16:08.881455Z"
+     "iopub.execute_input": "2024-01-26T19:26:24.808912Z",
+     "iopub.status.busy": "2024-01-26T19:26:24.808498Z",
+     "iopub.status.idle": "2024-01-26T19:26:24.820193Z",
+     "shell.execute_reply": "2024-01-26T19:26:24.818707Z"
     },
     "papermill": {
-     "duration": 0.028103,
-     "end_time": "2024-01-26T19:16:08.887566",
+     "duration": 0.023141,
+     "end_time": "2024-01-26T19:26:24.824204",
      "exception": false,
-     "start_time": "2024-01-26T19:16:08.859463",
+     "start_time": "2024-01-26T19:26:24.801063",
      "status": "completed"
     },
     "tags": []
@@ -419,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "62fde8bf",
+   "id": "8ee29d42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T19:16:08.905229Z",
-     "iopub.status.busy": "2024-01-26T19:16:08.902079Z",
-     "iopub.status.idle": "2024-01-26T19:16:08.916950Z",
-     "shell.execute_reply": "2024-01-26T19:16:08.914779Z"
+     "iopub.execute_input": "2024-01-26T19:26:24.838213Z",
+     "iopub.status.busy": "2024-01-26T19:26:24.837633Z",
+     "iopub.status.idle": "2024-01-26T19:26:24.847205Z",
+     "shell.execute_reply": "2024-01-26T19:26:24.846300Z"
     },
     "papermill": {
-     "duration": 0.028461,
-     "end_time": "2024-01-26T19:16:08.922649",
+     "duration": 0.020523,
+     "end_time": "2024-01-26T19:26:24.850888",
      "exception": false,
-     "start_time": "2024-01-26T19:16:08.894188",
+     "start_time": "2024-01-26T19:26:24.830365",
      "status": "completed"
     },
     "tags": []
@@ -455,19 +490,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0ff9761c",
+   "id": "8a8a29b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T19:16:08.942381Z",
-     "iopub.status.busy": "2024-01-26T19:16:08.939932Z",
-     "iopub.status.idle": "2024-01-26T19:16:11.237544Z",
-     "shell.execute_reply": "2024-01-26T19:16:11.236230Z"
+     "iopub.execute_input": "2024-01-26T19:26:24.864133Z",
+     "iopub.status.busy": "2024-01-26T19:26:24.863451Z",
+     "iopub.status.idle": "2024-01-26T19:26:26.875653Z",
+     "shell.execute_reply": "2024-01-26T19:26:26.874320Z"
     },
     "papermill": {
-     "duration": 2.310966,
-     "end_time": "2024-01-26T19:16:11.240898",
+     "duration": 2.022171,
+     "end_time": "2024-01-26T19:26:26.878526",
      "exception": false,
-     "start_time": "2024-01-26T19:16:08.929932",
+     "start_time": "2024-01-26T19:26:24.856355",
      "status": "completed"
     },
     "tags": []
@@ -500,21 +535,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d91e9bbf",
+   "cell_type": "markdown",
+   "id": "b1152d63",
    "metadata": {
     "papermill": {
-     "duration": 0.00452,
-     "end_time": "2024-01-26T19:16:11.250474",
+     "duration": 0.00482,
+     "end_time": "2024-01-26T19:26:26.888517",
      "exception": false,
-     "start_time": "2024-01-26T19:16:11.245954",
+     "start_time": "2024-01-26T19:26:26.883697",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References\n",
+    "[1] Bressan, David. Image of the Titanic. 14 Apr. 2019. A Geological Study Of The Titanic Shipwreck Site, Forbes, https://imageio.forbes.com/specials-images/dam/imageserve/877330410/960x0.jpg?format=jpg&width=1440. Accessed 26 Jan. 2024. "
+   ]
   }
  ],
  "metadata": {
@@ -552,14 +588,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.643488,
-   "end_time": "2024-01-26T19:16:11.982139",
+   "duration": 7.092604,
+   "end_time": "2024-01-26T19:26:27.618164",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-26T19:16:02.338651",
+   "start_time": "2024-01-26T19:26:20.525560",
    "version": "2.4.0"
   }
  },
