--- a/titanic-competition-analysis.ipynb
+++ b/titanic-competition-analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c69b50f1",
+   "id": "b1a34265",
    "metadata": {
     "papermill": {
-     "duration": 0.005747,
-     "end_time": "2024-01-27T16:56:58.765876",
+     "duration": 0.005571,
+     "end_time": "2024-01-27T17:01:56.063619",
      "exception": false,
-     "start_time": "2024-01-27T16:56:58.760129",
+     "start_time": "2024-01-27T17:01:56.058048",
      "status": "completed"
     },
     "tags": []
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c3bd3b",
+   "id": "1435f30d",
    "metadata": {
     "papermill": {
-     "duration": 0.005232,
-     "end_time": "2024-01-27T16:56:58.776688",
+     "duration": 0.004683,
+     "end_time": "2024-01-27T17:01:56.073883",
      "exception": false,
-     "start_time": "2024-01-27T16:56:58.771456",
+     "start_time": "2024-01-27T17:01:56.069200",
      "status": "completed"
     },
     "tags": []
@@ -38,21 +38,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adf7d4c0",
+   "id": "99662755",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:58.793897Z",
-     "iopub.status.busy": "2024-01-27T16:56:58.792874Z",
-     "iopub.status.idle": "2024-01-27T16:56:59.319860Z",
-     "shell.execute_reply": "2024-01-27T16:56:59.318545Z"
+     "iopub.execute_input": "2024-01-27T17:01:56.086620Z",
+     "iopub.status.busy": "2024-01-27T17:01:56.085698Z",
+     "iopub.status.idle": "2024-01-27T17:01:56.595079Z",
+     "shell.execute_reply": "2024-01-27T17:01:56.593590Z"
     },
     "papermill": {
-     "duration": 0.539627,
-     "end_time": "2024-01-27T16:56:59.322985",
+     "duration": 0.519234,
+     "end_time": "2024-01-27T17:01:56.598138",
      "exception": false,
-     "start_time": "2024-01-27T16:56:58.783358",
+     "start_time": "2024-01-27T17:01:56.078904",
      "status": "completed"
     },
     "tags": []
@@ -91,19 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01b91ec3",
+   "id": "b7903078",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:59.336827Z",
-     "iopub.status.busy": "2024-01-27T16:56:59.335730Z",
-     "iopub.status.idle": "2024-01-27T16:56:59.395176Z",
-     "shell.execute_reply": "2024-01-27T16:56:59.393914Z"
+     "iopub.execute_input": "2024-01-27T17:01:56.611845Z",
+     "iopub.status.busy": "2024-01-27T17:01:56.610705Z",
+     "iopub.status.idle": "2024-01-27T17:01:56.663492Z",
+     "shell.execute_reply": "2024-01-27T17:01:56.662239Z"
     },
     "papermill": {
-     "duration": 0.069706,
-     "end_time": "2024-01-27T16:56:59.398069",
+     "duration": 0.063099,
+     "end_time": "2024-01-27T17:01:56.666603",
      "exception": false,
-     "start_time": "2024-01-27T16:56:59.328363",
+     "start_time": "2024-01-27T17:01:56.603504",
      "status": "completed"
     },
     "tags": []
@@ -261,19 +261,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9be2f94d",
+   "id": "0a2840fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:59.411686Z",
-     "iopub.status.busy": "2024-01-27T16:56:59.411204Z",
-     "iopub.status.idle": "2024-01-27T16:56:59.438917Z",
-     "shell.execute_reply": "2024-01-27T16:56:59.437278Z"
+     "iopub.execute_input": "2024-01-27T17:01:56.680968Z",
+     "iopub.status.busy": "2024-01-27T17:01:56.679879Z",
+     "iopub.status.idle": "2024-01-27T17:01:56.708270Z",
+     "shell.execute_reply": "2024-01-27T17:01:56.706928Z"
     },
     "papermill": {
-     "duration": 0.039768,
-     "end_time": "2024-01-27T16:56:59.443459",
+     "duration": 0.038833,
+     "end_time": "2024-01-27T17:01:56.711295",
      "exception": false,
-     "start_time": "2024-01-27T16:56:59.403691",
+     "start_time": "2024-01-27T17:01:56.672462",
      "status": "completed"
     },
     "tags": []
@@ -418,19 +418,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bf6804b7",
+   "id": "08635835",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:59.459799Z",
-     "iopub.status.busy": "2024-01-27T16:56:59.458062Z",
-     "iopub.status.idle": "2024-01-27T16:56:59.472014Z",
-     "shell.execute_reply": "2024-01-27T16:56:59.470830Z"
+     "iopub.execute_input": "2024-01-27T17:01:56.725241Z",
+     "iopub.status.busy": "2024-01-27T17:01:56.724717Z",
+     "iopub.status.idle": "2024-01-27T17:01:56.737490Z",
+     "shell.execute_reply": "2024-01-27T17:01:56.736099Z"
     },
     "papermill": {
-     "duration": 0.02497,
-     "end_time": "2024-01-27T16:56:59.474976",
+     "duration": 0.023444,
+     "end_time": "2024-01-27T17:01:56.740704",
      "exception": false,
-     "start_time": "2024-01-27T16:56:59.450006",
+     "start_time": "2024-01-27T17:01:56.717260",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2576f70e",
+   "id": "edbb4d3e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:59.489997Z",
-     "iopub.status.busy": "2024-01-27T16:56:59.489463Z",
-     "iopub.status.idle": "2024-01-27T16:56:59.499847Z",
-     "shell.execute_reply": "2024-01-27T16:56:59.498356Z"
+     "iopub.execute_input": "2024-01-27T17:01:56.755530Z",
+     "iopub.status.busy": "2024-01-27T17:01:56.755049Z",
+     "iopub.status.idle": "2024-01-27T17:01:56.765672Z",
+     "shell.execute_reply": "2024-01-27T17:01:56.763934Z"
     },
     "papermill": {
-     "duration": 0.021604,
-     "end_time": "2024-01-27T16:56:59.502933",
+     "duration": 0.021749,
+     "end_time": "2024-01-27T17:01:56.768631",
      "exception": false,
-     "start_time": "2024-01-27T16:56:59.481329",
+     "start_time": "2024-01-27T17:01:56.746882",
      "status": "completed"
     },
     "tags": []
@@ -490,19 +490,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2c93fb9c",
+   "id": "46a48dd0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:59.517663Z",
-     "iopub.status.busy": "2024-01-27T16:56:59.517087Z",
-     "iopub.status.idle": "2024-01-27T16:56:59.550102Z",
-     "shell.execute_reply": "2024-01-27T16:56:59.548756Z"
+     "iopub.execute_input": "2024-01-27T17:01:56.783229Z",
+     "iopub.status.busy": "2024-01-27T17:01:56.782703Z",
+     "iopub.status.idle": "2024-01-27T17:01:56.813744Z",
+     "shell.execute_reply": "2024-01-27T17:01:56.812521Z"
     },
     "papermill": {
-     "duration": 0.043826,
-     "end_time": "2024-01-27T16:56:59.553018",
+     "duration": 0.042057,
+     "end_time": "2024-01-27T17:01:56.816806",
      "exception": false,
-     "start_time": "2024-01-27T16:56:59.509192",
+     "start_time": "2024-01-27T17:01:56.774749",
      "status": "completed"
     },
     "tags": []
@@ -647,19 +647,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0dd3323e",
+   "id": "22eb372f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:59.569250Z",
-     "iopub.status.busy": "2024-01-27T16:56:59.568286Z",
-     "iopub.status.idle": "2024-01-27T16:56:59.961180Z",
-     "shell.execute_reply": "2024-01-27T16:56:59.959708Z"
+     "iopub.execute_input": "2024-01-27T17:01:56.831706Z",
+     "iopub.status.busy": "2024-01-27T17:01:56.831219Z",
+     "iopub.status.idle": "2024-01-27T17:01:57.180955Z",
+     "shell.execute_reply": "2024-01-27T17:01:57.179623Z"
     },
     "papermill": {
-     "duration": 0.404371,
-     "end_time": "2024-01-27T16:56:59.964035",
+     "duration": 0.360303,
+     "end_time": "2024-01-27T17:01:57.183411",
      "exception": false,
-     "start_time": "2024-01-27T16:56:59.559664",
+     "start_time": "2024-01-27T17:01:56.823108",
      "status": "completed"
     },
     "tags": []
@@ -694,19 +694,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e838b786",
+   "id": "93b7e4d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:56:59.980486Z",
-     "iopub.status.busy": "2024-01-27T16:56:59.980061Z",
-     "iopub.status.idle": "2024-01-27T16:57:00.013981Z",
-     "shell.execute_reply": "2024-01-27T16:57:00.012851Z"
+     "iopub.execute_input": "2024-01-27T17:01:57.198654Z",
+     "iopub.status.busy": "2024-01-27T17:01:57.198183Z",
+     "iopub.status.idle": "2024-01-27T17:01:57.226326Z",
+     "shell.execute_reply": "2024-01-27T17:01:57.225346Z"
     },
     "papermill": {
-     "duration": 0.04537,
-     "end_time": "2024-01-27T16:57:00.016629",
+     "duration": 0.038553,
+     "end_time": "2024-01-27T17:01:57.228737",
      "exception": false,
-     "start_time": "2024-01-27T16:56:59.971259",
+     "start_time": "2024-01-27T17:01:57.190184",
      "status": "completed"
     },
     "tags": []
@@ -876,19 +876,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa38c2e8",
+   "id": "e5c89ed6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T16:57:00.033223Z",
-     "iopub.status.busy": "2024-01-27T16:57:00.032406Z",
-     "iopub.status.idle": "2024-01-27T16:57:02.406863Z",
-     "shell.execute_reply": "2024-01-27T16:57:02.405489Z"
+     "iopub.execute_input": "2024-01-27T17:01:57.246279Z",
+     "iopub.status.busy": "2024-01-27T17:01:57.244880Z",
+     "iopub.status.idle": "2024-01-27T17:01:59.193571Z",
+     "shell.execute_reply": "2024-01-27T17:01:59.192120Z"
     },
     "papermill": {
-     "duration": 2.386001,
-     "end_time": "2024-01-27T16:57:02.409704",
+     "duration": 1.96068,
+     "end_time": "2024-01-27T17:01:59.196598",
      "exception": false,
-     "start_time": "2024-01-27T16:57:00.023703",
+     "start_time": "2024-01-27T17:01:57.235918",
      "status": "completed"
     },
     "tags": []
@@ -898,13 +898,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8212\n",
-      "Precision: 0.8387\n",
-      "Recall: 0.7027\n",
-      "F1 Score: 0.7647\n",
+      "Accuracy: 0.8101\n",
+      "Precision: 0.8226\n",
+      "Recall: 0.6892\n",
+      "F1 Score: 0.7500\n",
       "Confusion Matrix:\n",
-      "[[95 10]\n",
-      " [22 52]]\n",
+      "[[94 11]\n",
+      " [23 51]]\n",
       "Your submission was successfully saved!\n"
      ]
     }
@@ -912,6 +912,11 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "model = GradientBoostingClassifier()\n",
+    "\n",
+    "\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "# Select features\n",
@@ -925,7 +930,7 @@
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize the RandomForestClassifier\n",
-    "model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "# model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
     "\n",
     "# Train the model on the training set\n",
     "model.fit(X_train, y_train)\n",
@@ -957,13 +962,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d0d79c",
+   "id": "37df6fbb",
    "metadata": {
     "papermill": {
-     "duration": 0.007344,
-     "end_time": "2024-01-27T16:57:02.424645",
+     "duration": 0.006905,
+     "end_time": "2024-01-27T17:01:59.211299",
      "exception": false,
-     "start_time": "2024-01-27T16:57:02.417301",
+     "start_time": "2024-01-27T17:01:59.204394",
      "status": "completed"
     },
     "tags": []
@@ -1009,14 +1014,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.350711,
-   "end_time": "2024-01-27T16:57:03.162309",
+   "duration": 9.611432,
+   "end_time": "2024-01-27T17:02:01.862913",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-27T16:56:54.811598",
+   "start_time": "2024-01-27T17:01:52.251481",
    "version": "2.4.0"
   }
  },
