Kaggle Notebook | Titanic Competition Analysis | Version 8

--- a/titanic-competition-analysis.ipynb
+++ b/titanic-competition-analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1a34265",
+   "id": "3c4bc31b",
    "metadata": {
     "papermill": {
-     "duration": 0.005571,
-     "end_time": "2024-01-27T17:01:56.063619",
+     "duration": 0.003617,
+     "end_time": "2024-01-27T17:10:53.691856",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.058048",
+     "start_time": "2024-01-27T17:10:53.688239",
      "status": "completed"
     },
     "tags": []
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1435f30d",
+   "id": "86a8e0a7",
    "metadata": {
     "papermill": {
-     "duration": 0.004683,
-     "end_time": "2024-01-27T17:01:56.073883",
+     "duration": 0.002717,
+     "end_time": "2024-01-27T17:10:53.697759",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.069200",
+     "start_time": "2024-01-27T17:10:53.695042",
      "status": "completed"
     },
     "tags": []
@@ -38,21 +38,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99662755",
+   "id": "f9af3b28",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:56.086620Z",
-     "iopub.status.busy": "2024-01-27T17:01:56.085698Z",
-     "iopub.status.idle": "2024-01-27T17:01:56.595079Z",
-     "shell.execute_reply": "2024-01-27T17:01:56.593590Z"
+     "iopub.execute_input": "2024-01-27T17:10:53.706485Z",
+     "iopub.status.busy": "2024-01-27T17:10:53.704907Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.022358Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.020618Z"
     },
     "papermill": {
-     "duration": 0.519234,
-     "end_time": "2024-01-27T17:01:56.598138",
+     "duration": 0.324663,
+     "end_time": "2024-01-27T17:10:54.025313",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.078904",
+     "start_time": "2024-01-27T17:10:53.700650",
      "status": "completed"
     },
     "tags": []
@@ -91,19 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b7903078",
+   "id": "24299ec3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:56.611845Z",
-     "iopub.status.busy": "2024-01-27T17:01:56.610705Z",
-     "iopub.status.idle": "2024-01-27T17:01:56.663492Z",
-     "shell.execute_reply": "2024-01-27T17:01:56.662239Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.034150Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.033697Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.078752Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.077686Z"
     },
     "papermill": {
-     "duration": 0.063099,
-     "end_time": "2024-01-27T17:01:56.666603",
+     "duration": 0.052709,
+     "end_time": "2024-01-27T17:10:54.081567",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.603504",
+     "start_time": "2024-01-27T17:10:54.028858",
      "status": "completed"
     },
     "tags": []
@@ -261,19 +261,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a2840fa",
+   "id": "617a33c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:56.680968Z",
-     "iopub.status.busy": "2024-01-27T17:01:56.679879Z",
-     "iopub.status.idle": "2024-01-27T17:01:56.708270Z",
-     "shell.execute_reply": "2024-01-27T17:01:56.706928Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.090020Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.089689Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.110490Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.109268Z"
     },
     "papermill": {
-     "duration": 0.038833,
-     "end_time": "2024-01-27T17:01:56.711295",
+     "duration": 0.027741,
+     "end_time": "2024-01-27T17:10:54.112811",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.672462",
+     "start_time": "2024-01-27T17:10:54.085070",
      "status": "completed"
     },
     "tags": []
@@ -418,19 +418,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08635835",
+   "id": "dbc8d3bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:56.725241Z",
-     "iopub.status.busy": "2024-01-27T17:01:56.724717Z",
-     "iopub.status.idle": "2024-01-27T17:01:56.737490Z",
-     "shell.execute_reply": "2024-01-27T17:01:56.736099Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.121830Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.121445Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.133407Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.132391Z"
     },
     "papermill": {
-     "duration": 0.023444,
-     "end_time": "2024-01-27T17:01:56.740704",
+     "duration": 0.019951,
+     "end_time": "2024-01-27T17:10:54.136633",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.717260",
+     "start_time": "2024-01-27T17:10:54.116682",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "edbb4d3e",
+   "id": "3c6ab3ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:56.755530Z",
-     "iopub.status.busy": "2024-01-27T17:01:56.755049Z",
-     "iopub.status.idle": "2024-01-27T17:01:56.765672Z",
-     "shell.execute_reply": "2024-01-27T17:01:56.763934Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.147233Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.146053Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.155131Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.154209Z"
     },
     "papermill": {
-     "duration": 0.021749,
-     "end_time": "2024-01-27T17:01:56.768631",
+     "duration": 0.016527,
+     "end_time": "2024-01-27T17:10:54.157379",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.746882",
+     "start_time": "2024-01-27T17:10:54.140852",
      "status": "completed"
     },
     "tags": []
@@ -490,19 +490,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "46a48dd0",
+   "id": "edb0408c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:56.783229Z",
-     "iopub.status.busy": "2024-01-27T17:01:56.782703Z",
-     "iopub.status.idle": "2024-01-27T17:01:56.813744Z",
-     "shell.execute_reply": "2024-01-27T17:01:56.812521Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.167340Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.166769Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.189992Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.189118Z"
     },
     "papermill": {
-     "duration": 0.042057,
-     "end_time": "2024-01-27T17:01:56.816806",
+     "duration": 0.030625,
+     "end_time": "2024-01-27T17:10:54.191942",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.774749",
+     "start_time": "2024-01-27T17:10:54.161317",
      "status": "completed"
     },
     "tags": []
@@ -647,19 +647,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "22eb372f",
+   "id": "93081d7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:56.831706Z",
-     "iopub.status.busy": "2024-01-27T17:01:56.831219Z",
-     "iopub.status.idle": "2024-01-27T17:01:57.180955Z",
-     "shell.execute_reply": "2024-01-27T17:01:57.179623Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.202774Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.202201Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.487175Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.484826Z"
     },
     "papermill": {
-     "duration": 0.360303,
-     "end_time": "2024-01-27T17:01:57.183411",
+     "duration": 0.293515,
+     "end_time": "2024-01-27T17:10:54.490310",
      "exception": false,
-     "start_time": "2024-01-27T17:01:56.823108",
+     "start_time": "2024-01-27T17:10:54.196795",
      "status": "completed"
     },
     "tags": []
@@ -694,19 +694,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "93b7e4d6",
+   "id": "e29738e5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:57.198654Z",
-     "iopub.status.busy": "2024-01-27T17:01:57.198183Z",
-     "iopub.status.idle": "2024-01-27T17:01:57.226326Z",
-     "shell.execute_reply": "2024-01-27T17:01:57.225346Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.501106Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.500754Z",
+     "iopub.status.idle": "2024-01-27T17:10:54.525575Z",
+     "shell.execute_reply": "2024-01-27T17:10:54.524062Z"
     },
     "papermill": {
-     "duration": 0.038553,
-     "end_time": "2024-01-27T17:01:57.228737",
+     "duration": 0.032723,
+     "end_time": "2024-01-27T17:10:54.527637",
      "exception": false,
-     "start_time": "2024-01-27T17:01:57.190184",
+     "start_time": "2024-01-27T17:10:54.494914",
      "status": "completed"
     },
     "tags": []
@@ -876,19 +876,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e5c89ed6",
+   "id": "71a52b04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:01:57.246279Z",
-     "iopub.status.busy": "2024-01-27T17:01:57.244880Z",
-     "iopub.status.idle": "2024-01-27T17:01:59.193571Z",
-     "shell.execute_reply": "2024-01-27T17:01:59.192120Z"
+     "iopub.execute_input": "2024-01-27T17:10:54.538403Z",
+     "iopub.status.busy": "2024-01-27T17:10:54.538042Z",
+     "iopub.status.idle": "2024-01-27T17:10:56.315414Z",
+     "shell.execute_reply": "2024-01-27T17:10:56.313776Z"
     },
     "papermill": {
-     "duration": 1.96068,
-     "end_time": "2024-01-27T17:01:59.196598",
+     "duration": 1.786113,
+     "end_time": "2024-01-27T17:10:56.318334",
      "exception": false,
-     "start_time": "2024-01-27T17:01:57.235918",
+     "start_time": "2024-01-27T17:10:54.532221",
      "status": "completed"
     },
     "tags": []
@@ -898,29 +898,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8101\n",
-      "Precision: 0.8226\n",
-      "Recall: 0.6892\n",
-      "F1 Score: 0.7500\n",
+      "Accuracy: 0.7877\n",
+      "Precision: 0.8000\n",
+      "Recall: 0.6486\n",
+      "F1 Score: 0.7164\n",
       "Confusion Matrix:\n",
-      "[[94 11]\n",
-      " [23 51]]\n",
+      "[[93 12]\n",
+      " [26 48]]\n",
       "Your submission was successfully saved!\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "model = GradientBoostingClassifier()\n",
-    "\n",
-    "\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "# Select features\n",
-    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\", \"Age_category\"]\n",
+    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\"]\n",
     "\n",
     "# Prepare the data\n",
     "X = pd.get_dummies(train_data[features])\n",
@@ -929,8 +926,12 @@
     "# Split the data into training and validation sets\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Initialize the RandomForestClassifier\n",
-    "# model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "# Initialize RandomForestClassifier and DecisionTreeClassifier\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "dt_model = DecisionTreeClassifier(random_state=1)\n",
+    "\n",
+    "# Create a VotingClassifier with the two models\n",
+    "model = VotingClassifier(estimators=[('rf', rf_model), ('dt', dt_model)], voting='hard')\n",
     "\n",
     "# Train the model on the training set\n",
     "model.fit(X_train, y_train)\n",
@@ -957,18 +958,18 @@
     "# Save predictions to CSV\n",
     "output = pd.DataFrame({'PassengerId': test_data.PassengerId, 'Survived': predictions})\n",
     "output.to_csv('submission.csv', index=False)\n",
-    "print(\"Your submission was successfully saved!\")\n"
+    "print(\"Your submission was successfully saved!\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "37df6fbb",
+   "id": "9f268a70",
    "metadata": {
     "papermill": {
-     "duration": 0.006905,
-     "end_time": "2024-01-27T17:01:59.211299",
+     "duration": 0.004224,
+     "end_time": "2024-01-27T17:10:56.327431",
      "exception": false,
-     "start_time": "2024-01-27T17:01:59.204394",
+     "start_time": "2024-01-27T17:10:56.323207",
      "status": "completed"
     },
     "tags": []
@@ -1014,14 +1015,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.611432,
-   "end_time": "2024-01-27T17:02:01.862913",
+   "duration": 5.996777,
+   "end_time": "2024-01-27T17:10:56.954383",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-27T17:01:52.251481",
+   "start_time": "2024-01-27T17:10:50.957606",
    "version": "2.4.0"
   }
  },
