Kaggle Notebook | Titanic Competition Analysis | Version 9

--- a/titanic-competition-analysis.ipynb
+++ b/titanic-competition-analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c4bc31b",
+   "id": "57a35a8b",
    "metadata": {
     "papermill": {
-     "duration": 0.003617,
-     "end_time": "2024-01-27T17:10:53.691856",
+     "duration": 0.005302,
+     "end_time": "2024-01-27T17:13:18.963952",
      "exception": false,
-     "start_time": "2024-01-27T17:10:53.688239",
+     "start_time": "2024-01-27T17:13:18.958650",
      "status": "completed"
     },
     "tags": []
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86a8e0a7",
+   "id": "d4f10085",
    "metadata": {
     "papermill": {
-     "duration": 0.002717,
-     "end_time": "2024-01-27T17:10:53.697759",
+     "duration": 0.004893,
+     "end_time": "2024-01-27T17:13:18.974338",
      "exception": false,
-     "start_time": "2024-01-27T17:10:53.695042",
+     "start_time": "2024-01-27T17:13:18.969445",
      "status": "completed"
     },
     "tags": []
@@ -38,21 +38,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f9af3b28",
+   "id": "2a3cf9d1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:53.706485Z",
-     "iopub.status.busy": "2024-01-27T17:10:53.704907Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.022358Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.020618Z"
+     "iopub.execute_input": "2024-01-27T17:13:18.987098Z",
+     "iopub.status.busy": "2024-01-27T17:13:18.986189Z",
+     "iopub.status.idle": "2024-01-27T17:13:19.443699Z",
+     "shell.execute_reply": "2024-01-27T17:13:19.442238Z"
     },
     "papermill": {
-     "duration": 0.324663,
-     "end_time": "2024-01-27T17:10:54.025313",
+     "duration": 0.467187,
+     "end_time": "2024-01-27T17:13:19.446622",
      "exception": false,
-     "start_time": "2024-01-27T17:10:53.700650",
+     "start_time": "2024-01-27T17:13:18.979435",
      "status": "completed"
     },
     "tags": []
@@ -91,19 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "24299ec3",
+   "id": "21f849b8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.034150Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.033697Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.078752Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.077686Z"
+     "iopub.execute_input": "2024-01-27T17:13:19.458654Z",
+     "iopub.status.busy": "2024-01-27T17:13:19.458126Z",
+     "iopub.status.idle": "2024-01-27T17:13:19.513174Z",
+     "shell.execute_reply": "2024-01-27T17:13:19.511947Z"
     },
     "papermill": {
-     "duration": 0.052709,
-     "end_time": "2024-01-27T17:10:54.081567",
+     "duration": 0.064125,
+     "end_time": "2024-01-27T17:13:19.515849",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.028858",
+     "start_time": "2024-01-27T17:13:19.451724",
      "status": "completed"
     },
     "tags": []
@@ -261,19 +261,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "617a33c7",
+   "id": "e5de073e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.090020Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.089689Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.110490Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.109268Z"
+     "iopub.execute_input": "2024-01-27T17:13:19.528504Z",
+     "iopub.status.busy": "2024-01-27T17:13:19.527720Z",
+     "iopub.status.idle": "2024-01-27T17:13:19.553472Z",
+     "shell.execute_reply": "2024-01-27T17:13:19.552534Z"
     },
     "papermill": {
-     "duration": 0.027741,
-     "end_time": "2024-01-27T17:10:54.112811",
+     "duration": 0.034891,
+     "end_time": "2024-01-27T17:13:19.556052",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.085070",
+     "start_time": "2024-01-27T17:13:19.521161",
      "status": "completed"
     },
     "tags": []
@@ -418,19 +418,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dbc8d3bd",
+   "id": "9be84c85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.121830Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.121445Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.133407Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.132391Z"
+     "iopub.execute_input": "2024-01-27T17:13:19.570690Z",
+     "iopub.status.busy": "2024-01-27T17:13:19.569366Z",
+     "iopub.status.idle": "2024-01-27T17:13:19.583070Z",
+     "shell.execute_reply": "2024-01-27T17:13:19.581168Z"
     },
     "papermill": {
-     "duration": 0.019951,
-     "end_time": "2024-01-27T17:10:54.136633",
+     "duration": 0.024275,
+     "end_time": "2024-01-27T17:13:19.586341",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.116682",
+     "start_time": "2024-01-27T17:13:19.562066",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3c6ab3ea",
+   "id": "7d6629ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.147233Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.146053Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.155131Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.154209Z"
+     "iopub.execute_input": "2024-01-27T17:13:19.600773Z",
+     "iopub.status.busy": "2024-01-27T17:13:19.600053Z",
+     "iopub.status.idle": "2024-01-27T17:13:19.608668Z",
+     "shell.execute_reply": "2024-01-27T17:13:19.607280Z"
     },
     "papermill": {
-     "duration": 0.016527,
-     "end_time": "2024-01-27T17:10:54.157379",
+     "duration": 0.019032,
+     "end_time": "2024-01-27T17:13:19.611419",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.140852",
+     "start_time": "2024-01-27T17:13:19.592387",
      "status": "completed"
     },
     "tags": []
@@ -490,19 +490,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "edb0408c",
+   "id": "ba31f0b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.167340Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.166769Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.189992Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.189118Z"
+     "iopub.execute_input": "2024-01-27T17:13:19.625238Z",
+     "iopub.status.busy": "2024-01-27T17:13:19.624816Z",
+     "iopub.status.idle": "2024-01-27T17:13:19.656349Z",
+     "shell.execute_reply": "2024-01-27T17:13:19.654962Z"
     },
     "papermill": {
-     "duration": 0.030625,
-     "end_time": "2024-01-27T17:10:54.191942",
+     "duration": 0.04194,
+     "end_time": "2024-01-27T17:13:19.659237",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.161317",
+     "start_time": "2024-01-27T17:13:19.617297",
      "status": "completed"
     },
     "tags": []
@@ -647,19 +647,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "93081d7b",
+   "id": "3579b234",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.202774Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.202201Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.487175Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.484826Z"
+     "iopub.execute_input": "2024-01-27T17:13:19.674957Z",
+     "iopub.status.busy": "2024-01-27T17:13:19.674544Z",
+     "iopub.status.idle": "2024-01-27T17:13:20.070058Z",
+     "shell.execute_reply": "2024-01-27T17:13:20.068814Z"
     },
     "papermill": {
-     "duration": 0.293515,
-     "end_time": "2024-01-27T17:10:54.490310",
+     "duration": 0.406736,
+     "end_time": "2024-01-27T17:13:20.072928",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.196795",
+     "start_time": "2024-01-27T17:13:19.666192",
      "status": "completed"
     },
     "tags": []
@@ -694,19 +694,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e29738e5",
+   "id": "f271669f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.501106Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.500754Z",
-     "iopub.status.idle": "2024-01-27T17:10:54.525575Z",
-     "shell.execute_reply": "2024-01-27T17:10:54.524062Z"
+     "iopub.execute_input": "2024-01-27T17:13:20.089120Z",
+     "iopub.status.busy": "2024-01-27T17:13:20.088697Z",
+     "iopub.status.idle": "2024-01-27T17:13:20.119833Z",
+     "shell.execute_reply": "2024-01-27T17:13:20.118534Z"
     },
     "papermill": {
-     "duration": 0.032723,
-     "end_time": "2024-01-27T17:10:54.527637",
+     "duration": 0.042471,
+     "end_time": "2024-01-27T17:13:20.122677",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.494914",
+     "start_time": "2024-01-27T17:13:20.080206",
      "status": "completed"
     },
     "tags": []
@@ -876,19 +876,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "71a52b04",
+   "id": "efdc985c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:10:54.538403Z",
-     "iopub.status.busy": "2024-01-27T17:10:54.538042Z",
-     "iopub.status.idle": "2024-01-27T17:10:56.315414Z",
-     "shell.execute_reply": "2024-01-27T17:10:56.313776Z"
+     "iopub.execute_input": "2024-01-27T17:13:20.140942Z",
+     "iopub.status.busy": "2024-01-27T17:13:20.140445Z",
+     "iopub.status.idle": "2024-01-27T17:13:22.476176Z",
+     "shell.execute_reply": "2024-01-27T17:13:22.474959Z"
     },
     "papermill": {
-     "duration": 1.786113,
-     "end_time": "2024-01-27T17:10:56.318334",
+     "duration": 2.349189,
+     "end_time": "2024-01-27T17:13:22.479034",
      "exception": false,
-     "start_time": "2024-01-27T17:10:54.532221",
+     "start_time": "2024-01-27T17:13:20.129845",
      "status": "completed"
     },
     "tags": []
@@ -898,13 +898,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7877\n",
-      "Precision: 0.8000\n",
-      "Recall: 0.6486\n",
-      "F1 Score: 0.7164\n",
+      "Accuracy: 0.8101\n",
+      "Precision: 0.8704\n",
+      "Recall: 0.6351\n",
+      "F1 Score: 0.7344\n",
       "Confusion Matrix:\n",
-      "[[93 12]\n",
-      " [26 48]]\n",
+      "[[98  7]\n",
+      " [27 47]]\n",
       "Your submission was successfully saved!\n"
      ]
     }
@@ -917,7 +917,7 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "# Select features\n",
-    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\"]\n",
+    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\", \"Age_category\"]\n",
     "\n",
     "# Prepare the data\n",
     "X = pd.get_dummies(train_data[features])\n",
@@ -963,13 +963,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f268a70",
+   "id": "6a5403a5",
    "metadata": {
     "papermill": {
-     "duration": 0.004224,
-     "end_time": "2024-01-27T17:10:56.327431",
+     "duration": 0.006674,
+     "end_time": "2024-01-27T17:13:22.492833",
      "exception": false,
-     "start_time": "2024-01-27T17:10:56.323207",
+     "start_time": "2024-01-27T17:13:22.486159",
      "status": "completed"
     },
     "tags": []
@@ -1015,14 +1015,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 5.996777,
-   "end_time": "2024-01-27T17:10:56.954383",
+   "duration": 8.061389,
+   "end_time": "2024-01-27T17:13:23.222416",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-27T17:10:50.957606",
+   "start_time": "2024-01-27T17:13:15.161027",
    "version": "2.4.0"
   }
  },
